# stackspot-homeassistant

./: .gitignore  .repo.yml  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.dev/: copy-to-core.sh
.docs/: README.base.md  compatibility.md  flow.mermaid  variables.md
.github/workflows/: create-pr.yml  hassfest.yaml  release-develop.yml  update-repo-metadata.yml  validate.yml
custom_components/stackspot/: __init__.py  agent.py  ai_task.py  config_flow.py  const.py  conversation.py  data_utils.py  knowledge_source.py  manifest.json  select.py  sensor.py  tools.py  util.py
custom_components/stackspot/client/: stackspot_client.py
custom_components/stackspot/entities/: stackspot_entity_manager.py  token_sensor.py
custom_components/stackspot/translations/: en.json  pt-BR.json
tests/: test_agent.py
