[project]
name = "stackspot-homeassistant"
version = "0.1.0"
description = "Integration StackSpot AI with Home Assistant"
requires-python = ">=3.13.5"
dependencies = [
    "homeassistant>=2025.8.0",
]

[dependency-groups]
dev = [
    "hassil>=3.0.1",
    "home-assistant-intents>=2025.4.4",
    "pytest-homeassistant-custom-component>=0.13.261",
]
